css/styles.css
#game, #colorPicker {
  display: none;
}

body {
  font-family: 'Permanent Marker', cursive;
}

.btn, .col-xs-4 {
  width: 250px;
  height: 250px;
  border-radius: 0px;
  font-size: 2.8em;
  color: #F39C12;
}
.btn:hover {
  color: #F39C12;
}

.btn:focus {
  color: #F39C12;
}

.row {
  width: 750px;
  margin: 0 auto;

}

.container {
  text-align: center;
}
h1 {
  margin-bottom: 2%;
  margin-top: 5%;
  font-size: 5em;
  color: #F39C12;
  text-align: center;
}

h1:hover {
  color: #A569BD;
}

.chosen {
  text-decoration: underline;
}

#topRow {
  margin-bottom: 50px;
}

form {
  width: 500px;
  margin: 0 auto;
}

form .btn {
  color: #fff;
  background-color: #A569BD;
  border-color: #A569BD;
}

form .btn:hover {
  color: #fff;
  background-color: #5bc0de;
  border-color: #46b8da;
}

form .btn:focus {
  color: #fff;
  background-color: #31b0d5;
  border-color: #1b6d85;
}
 .uhoh {
   background-color: #FADBD8;
 }

 label {
   font-size: 1.8em;
 }

 h3 {
   /*text-shadow: -2px 2px 5px #222;*/
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #222;
   font-size: 2em;
 }

